--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "url": "https://github.com/alonsojr1980/mongoose-generator/issues"
   },
   "homepage": "https://github.com/alonsojr1980/mongoose-generator#readme",
-  "dependencies": {
+  "devdependencies": {
     "chai": "^4.2.0",
     "mongoose": "^5.5.7"
   }
